# solver_cpp

./: .gitignore  20grains16x16x16_tensionX_material.hdf5  20grains16x16x16_tensionX_material_numerics.hdf5  2x2x2_tensionX_material_numerics.hdf5  4x4x4_tensionX_material_numerics.hdf5  CMakeLists.txt  README.md  compare_outputs.py  concon.cpp  make_grid.py  mytest_tensionX_material_numerics.hdf5  output_damask_f.sh  simple_tensionX_material_numerics.hdf5  test.patch
examples/config/: numerics.yaml
examples/grid/: material.yaml  tensionX.yaml
external_helpers/: arr.yaml  convert_fortran_array_to_cpp.py  generate_test_gridfiles.py  parse_fortran_output.py
grid/: CMakeLists.txt
grid/include/: damask_grid.h  discretization_grid.h  fft.h  mech_base.h  mech_solver_basic.h  spectral.h  vti_reader.h
grid/include/spectral/: spectral.h
grid/include/spectral/fields/: mech.h
grid/include/spectral/mech/: basic.h  mech.h  utilities.h
grid/include/spectral/solver/: basic.h
grid/src/: CMakeLists.txt  damask_grid.cpp  discretization.f90  discretization_grid.cpp  fft.cpp  mech_base.cpp  mech_solver_basic.cpp  spectral.cpp  vti_reader.cpp
grid/src/spectral/: spectral.cpp
grid/src/spectral/fields/: mech.cpp
grid/src/spectral/mech/: basic.cpp  utilities.cpp
grid/src/spectral/solver/: basic.cpp
grid/test/: CMakeLists.txt  init_environments.hpp  mock_discretized_grid.hpp  simple_grid_setup.hpp  stub_fortran_interface.f90  test_cpp_fortran_interface.cpp  test_damask_grid.cpp  test_discretization_grid.cpp  test_fft.cpp  test_mech_base.cpp  test_mech_solver_basic.cpp  test_spectral.cpp  test_spectral_fields_mech.cpp  test_spectral_mech_basic.cpp  test_spectral_mech_utilities.cpp  test_spectral_solver_basic.cpp  test_vti_reader.cpp
include/: array_matcher.h  config.h  discretization.h  discretization_grid.h  fortran_utilities.h  helper.h  tensor_operations.h  vti_reader.h  yaml_reader.h
include/spectral/: spectral.h
include/spectral/mech/: basic.h
include/test/: complex_concatenator.h
src/: CLI.f90  CMakeLists.txt  VTI.f90  clean_up_fortran.f90  config.cpp  discretization.cpp  discretization.f90  discretization_grid.cpp  homogenization.f90  homogenization_mechanical.f90  lapack.f90  materialpoint.f90  math.f90  phase_mechanical.f90  phase_mechanical_elastic.f90  prec.f90  rotations.f90  tensor_printer.f90  vti_reader.cpp  yaml_reader.cpp
src/grid/: CMakeLists.txt  VTI.f90  config.cpp  config.h  damask_grid.cpp  damask_grid.h  discretization_grid.cpp  discretization_grid.h  fft.cpp  fft.h  main.cpp  mech_base.cpp  mech_base.h  mech_solver_basic.cpp  mech_solver_basic.h  spectral.cpp  spectral.h  utilities_fortran.h  utilities_tensor.h
src/grid/test/: CMakeLists.txt  conftest.h  init_environments.h  stub_fortran_interface.f90  test_config.cpp  test_cpp_fortran_interface.cpp  test_damask_grid.cpp  test_discretization_grid.cpp  test_fft.cpp  test_mech_base.cpp  test_mech_solver_basic.cpp  test_spectral.cpp
src/spectral/: spectral.cpp
src/spectral/mech/: basic.cpp
test/: CMakeLists.txt  mock_discretized_grid.hpp  test_config.cpp  test_cpp_fortran_interface.cpp  test_discretization_grid.cpp  test_spectral.cpp  test_spectral_mech_basic.cpp  test_vti_reader.cpp  test_yaml_reader.cpp
